# stem-resource-finder

./: .env.example  CLAUDE.md  IMPLEMENTATION_PLAN.md  README.md  config.json  pyproject.toml  requirements.txt  test_analyzer.py
modules/: __init__.py  llm_analyzer.py
ui/: md_converter.py
utils/: __init__.py
